# zus-chatbot

./: .gitignore  docker-compose.yml
chatbot/: pyproject.toml
chatbot/src/: entrypoint.sh  main.py
chatbot/src/agents/: zus_agent.py
chatbot/src/chains/: main.py  outlet_chain.py  product_chain.py
chatbot/src/models/: zus_query.py
chatbot/src/tools/: calculator.py
chatbot/src/utils/: async_utils.py
data/: scraper.py
frontend/: pyproject.toml
frontend/src/: entrypoint.sh  main.py
